examples/pos/array2.pcl
program array2;

begin
  "TEST"[0] := 'c';
end.
