examples/neg/array1.pcl
program array1;
    var x: array [2] of integer;
    var y: array of integer;
begin
    x := y;
end.
